Create: admin panel

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": "^7.3|^8.0",
+        "php": "^7.4|^8.0",
+        "illuminate/cookie": "^8.49",
         "irazasyed/telegram-bot-sdk": "3.4",
         "laravel/lumen-framework": "^8.0"
     },
