--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": "^7.4|^8.0",
+        "doctrine/dbal": "^3.1",
         "illuminate/cookie": "^8.49",
         "irazasyed/telegram-bot-sdk": "3.4",
         "laravel/lumen-framework": "^8.0"
